# EDM

./: LINKEDIN_POST.md  README.md
.github/workflows/: test.yml
cli/: README.md  pyproject.toml
cli/edm_cli/: client.py  config.py  main.py
docs/: 00-vision-and-requirements.md  01-product-architecture.md  02-domain-model.md  03-engineering-principles.md  04-repository-structure.md  16-build-roadmap.md  17-codebase-map.md
docs/adr/: 0000-adr-template.md  0001-apache-iceberg-as-table-format.md  0002-python-fastapi-modular-monolith.md  0003-trimmed-phase-1-stack.md  0004-wsl2-docker-deferred-on-dev-laptop.md  0005-quality-pulled-into-mvp.md  0006-lineage-pulled-into-mvp.md  0007-react-ui-and-cors-fix.md  0008-alerting-pulled-into-mvp.md  0009-encrypted-secrets-and-enterprise-connectors.md  0010-notebook-sandbox-and-pipeline-scheduling.md  0011-security-hardening-audit-and-notifications.md  0012-additional-connectors-and-notification-audit-ui.md
infrastructure/docker/: docker-compose.yml
services/edm-platform/: .env.example  README.md  requirements.txt
services/edm-platform/app/: config.py  database.py  deps.py  events.py  main.py  permissions.py  rate_limit.py  sandbox.py  scheduler.py  secrets.py
services/edm-platform/tests/: conftest.py  test_alerting.py  test_audit.py  test_catalog_tags.py  test_cors.py  test_enterprise_connectors.py  test_golden_path.py  test_google_sheets_connector.py  test_lineage.py  test_notebook.py  (+16 more)
ui/: .gitignore  README.md  index.html  package-lock.json  package.json
ui/e2e/: smoke.mjs
ui/src/: App.tsx  index.css  main.tsx
(+82 files in other folders)
