[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edm-cli"
version = "0.1.0"
description = "Command-line client for the EDM Platform"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.28",
]

[project.scripts]
edm = "edm_cli.main:cli"

[tool.setuptools]
packages = ["edm_cli"]
